init config file and log

--- a/system/config/config.conf
+++ b/system/config/config.conf
@@ -2,7 +2,7 @@
 WORKERS = 8
 
 #Maximum files the server can hold
-MAX_FILES = 100
+MAX_FILES = 10
 
 #Socket path
 SOCK_PATH = ./system/bin/SOL-2022.sk
@@ -17,4 +17,4 @@ POLICY = MFU
 MAX_SPACE = 32
 
 #It has no real use for now.
-DEBUG = YES
+DEBUG = yes
