Add close and open connection function api

--- a/system/config/config.conf
+++ b/system/config/config.conf
@@ -5,7 +5,7 @@ WORKERS = 8
 MAX_FILES = 10
 
 #Socket path
-SOCK_PATH = ./system/bin/SOL-2022.sk
+SOCK_PATH = ./system/bin/SOL-SOCKET.sk
 
 #Path where the logs will be written
 LOG_PATH = system/logs/server
@@ -18,3 +18,5 @@ MAX_SPACE = 32
 
 #It has no real use for now.
 DEBUG = yes
+
+STORAGE = HASH
