Adding test1 + fix minor bug

--- a/system/config/config.conf
+++ b/system/config/config.conf
@@ -16,7 +16,7 @@ POLICY = MFU
 #Maximum MB the server can hold
 MAX_SPACE = 1
 
-#It has no real use for now.
+#It used for print LOG_INFO and LOG_STATS.
 DEBUG = yes
 
 #Type of data struct.
