Fix a lot of bug and add test

--- a/system/config/config.conf
+++ b/system/config/config.conf
@@ -1,11 +1,11 @@
 #Number of workers
-WORKERS = 4
+WORKERS = 8
 
 #Maximum files the server can hold
-MAX_FILES = 5
+MAX_FILES = 100
 
 #Socket path
-SOCK_PATH = ./system/bin/SOL-SOCKET.sk
+SOCK_PATH = ./system/bin/SOL-2022.sk
 
 #Path where the logs will be written
 LOG_PATH = system/logs/server
@@ -14,10 +14,10 @@ LOG_PATH = system/logs/server
 POLICY = MFU
 
 #Maximum MB the server can hold
-MAX_SPACE = 1
+MAX_SPACE = 32
 
 #It used for print LOG_INFO and LOG_STATS.
 DEBUG = yes
 
 #Type of data struct.
-STORAGE = HASH
+STORAGE = RBT
