--- a/system/config/config.conf
+++ b/system/config/config.conf
@@ -1,5 +1,5 @@
 #Number of workers
-WORKERS = 8
+WORKERS = 1
 
 #Maximum files the server can hold
 MAX_FILES = 100
@@ -20,4 +20,4 @@ MAX_SPACE = 32
 DEBUG = yes
 
 #Type of data struct.
-STORAGE = RBT
+STORAGE = HASH
