--- a/system/config/config.conf
+++ b/system/config/config.conf
@@ -16,7 +16,7 @@ POLICY = MFU
 #Maximum MB the server can hold
 MAX_SPACE = 32
 
-#It used for print LOG_INFO and LOG_STATS.
+#It used for print all log file on shell.
 DEBUG = yes
 
 #Type of data struct.
